Обновляет название сайта

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css">
 
-  <title>mccrush</title>
+  <title>Разработка веб-приложений</title>
 </head>
 
 <body>
