--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,8 @@
     });
   </script>
   <noscript>
-    <div><img src="https://mc.yandex.ru/watch/12860854" style="position:absolute; left:-9999px;" alt="" /></div>
+    <div><img src="https://mc.yandex.ru/watch/12860854" style="position:absolute; left:-9999px;" alt="Yandex.Metrika" />
+    </div>
   </noscript>
   <!-- /Yandex.Metrika counter -->
 </body>
