--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
   <meta name="description"
     content="Современные сайты и веб-приложения (SPA, PWA), с адаптивным дизайном и офлайн-доступом">
   <title>Качественная разработка приложений</title>
+  <!-- <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,500,700&display=swap" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
