Добавляет новые шрифты и цвет

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,9 @@
     content="Современные сайты и веб-приложения (SPA, PWA), с адаптивным дизайном и офлайн-доступом">
   <title>Качественная разработка приложений</title>
   <!-- <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,500,700&display=swap" rel="stylesheet"> -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@400;700&display=swap"
+    rel="stylesheet">
 
 </head>
 
