Add yandex verif

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <meta name="yandex-verification" content="2b63e118fa42f157" />
   <meta name="description"
     content="Современные сайты и веб-приложения (SPA, PWA), с адаптивным дизайном и офлайн-доступом">
   <title>Качественная разработка приложений</title>
