--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <meta name="yandex-verification" content="2b63e118fa42f157" />
   <meta name="description"
-    content="Современные сайты и веб-приложения (SPA, PWA), с адаптивным дизайном и офлайн-доступом">
+    content="Разработка современных сайтов и веб-приложений (SPA, PWA), с адаптивным дизайном и офлайн-доступом">
   <title>Качественная разработка приложений</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
 </head>
