--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
   <title>Качественная разработка приложений</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+  <script data-ad-client="ca-pub-3692239007245422" async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
